--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Micole.github.io by micole</title>
+    <title>Micole.github.io by Micole</title>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Micole.github.io</h1>
-          <h2>my github.io page</h2>
+          <h2>Mikes github.io page</h2>
         </header>
 
         <section id="downloads" class="clearfix">
